examples/2-example/0-dev.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev-ns
  labels:
    istio-injection: enabled
