examples/2-example/1-stage.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stage-ns 
  labels:
    istio-injection: enabled
