examples/2-example/2-prod.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod-ns
  labels:
    istio-injection: enabled
