examples/2-example/peerauthentication.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: demo-mtls 
  namespace: stage-ns 
spec:
  mtls:
    mode: STRICT
