examples/2-example/allow-nothing.yml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: stage-ns
spec:
  action: ALLOW
  # the rules field is not specified, and the policy will never match.
